--- a/local_rmd_nbooks/m22_raw_MAST_intradon_DE_Chiyun.Rmd
+++ b/local_rmd_nbooks/m22_raw_MAST_intradon_DE_Chiyun.Rmd
@@ -89,6 +89,7 @@ knitr::opts_knit$set(root.dir = paste0("/lustre/scratch126/tol/teams/lawniczak/u
 source("../multipurpose_scripts_lnk/seurat_sce/seu_sce_common_fns.R")
 source("../multipurpose_scripts_lnk/plotting_common_fns.R")
 source("/nfs/users/nfs_j/jr35/Mali2/mali22_code/pf_common_vars.R")
+source("/nfs/users/nfs_j/jr35/Mali2/mali22_code/strain_DE/strain_DE_common_fns.R")
 ```
 
 ```{r}
@@ -120,6 +121,32 @@ v3_m2_asex_cr_filt_norm_harmony_pt <- v3_m2_asex_cr_filt_norm_harmony_pt[, !v3_m
 
 
 ```{r}
+## Creating new stage variables which are need to fit in with old code
+v3_m2_asex_cr_filt_norm_harmony_pt <- v3_m2_asex_cr_filt_norm_harmony_pt@meta.data %>% 
+  mutate(#across(donor, ~str_remove_all(.x, "C$")),
+         sample_id = donor,
+         donor_nm = str_remove_all(donor, "_SLO|_MACS|C$"),
+         condition = factor(condition, levels = c("Asymptomatic", "Symptomatic")), 
+         Symptomatic = condition,
+         # across(Symptomatic, ~factor(str_replace_all(.,  c("Yes" = "Symptomatic", "No" = "Asymptomatic")), levels=c("Symptomatic", "Asymptomatic"))),
+         StageFL = stage,
+         StageFL_ND = stage,
+         dset = dset_labmrg,
+         # StrainDon = paste0(str_remove(donor, "SC"), "_", Strain_DN),
+         StrainDon = paste0(str_remove(donor_nm, "SC"), "_", Strain_DN),
+         pseudotime = slingPseudotime_1,
+         pseudotime_fld_only = slingPseudotime_1,
+         # stage = stage_fld,
+         strain = Strain_DN,
+         dset = "Field",
+         dsetC = "Field") %>% 
+  select(StageFL, StageFL_ND, dset,StrainDon,pseudotime, pseudotime_fld_only,  strain, donor_nm, condition, Symptomatic, donor, dset, dsetC) %>% 
+  AddMetaData(v3_m2_asex_cr_filt_norm_harmony_pt, .)
+```
+
+
+
+```{r}
 DimPlot(v3_m2_asex_cr_filt_norm_harmony_pt, reduction = "umap.harmony_PC_man", group.by = "harmony_clusters_ss" )
 ```
 
@@ -144,34 +171,9 @@ FeaturePlot(v3_m2_asex_cr_filt_norm_harmony_pt, reduction = "umap.harmony_PC_man
 
 ```
 
-
-```{r, warning=FALSE, message=FALSE}
-##Generate pseudotime chunks categories with range of highest and lowest pseudotime values and breaks numbers to ensure balanced representation of cells and drop the cells without strain information
-
-ptime_chunk_calc_df_fn <- function(df, ptime, chunk_num) {
-  # v3_m2_asex_harmony_fld_sset_ptime1_fld@meta.data[,c('ptime_cat', 'ptime_bal_cat')] 
-  df %>% 
-          mutate(ptime_cat = cut(!!rlang::sym(ptime),  
-                                 breaks = c(-Inf, seq(min(!!rlang::sym(ptime)),  max(!!rlang::sym(ptime)), round((max(!!rlang::sym(ptime)) - min(!!rlang::sym(ptime)))/chunk_num, 2)), Inf)),
-                 pt_rank = dense_rank(!!rlang::sym(ptime)),
-                 ptime_bal_cat = cut(pt_rank,  
-                                 breaks = c(-Inf, seq(min(pt_rank),  max(pt_rank), round((max(pt_rank) - min(pt_rank))/chunk_num, 2)), Inf))
-                 ) %>%
-    mutate(ptime_grp_rnk = dense_rank(factor(ptime_cat)),
-           ptime_bal_grp_rnk = dense_rank(factor(ptime_bal_cat)),
-           ptime_cat = factor(paste0("ptime_", ptime_grp_rnk), levels = paste0("ptime_", 1:max(ptime_grp_rnk)) ),
-           ptime_bal_cat = factor(paste0("ptime_", ptime_bal_grp_rnk), levels = paste0("ptime_", 1:max(ptime_bal_grp_rnk)) )
-           ) %>%
-          dplyr::select(ptime_cat, ptime_bal_cat)
-  
-}
-
-```
-
-
 ```{r, warning=FALSE, message=FALSE}
 ## Calculate pseudotime chunks
-bal_df <- ptime_chunk_calc_df_fn(df = v3_m2_asex_cr_filt_norm_harmony_pt@meta.data, ptime = "slingPseudotime_1", chunk_num = 6)
+bal_df <- ptime_chunk_calc_df_fn(sc_df = v3_m2_asex_cr_filt_norm_harmony_pt@meta.data, ptime = "slingPseudotime_1", chunk_num = 20, p_cat_nm = "ptime_cat", p_bal_cat_nm = "ptime_bal_cat")
 ```
 
 
@@ -186,25 +188,125 @@ DimPlot(v3_m2_asex_cr_filt_norm_harmony_pt, reduction = "umap.harmony_PC_man", g
 DimPlot(v3_m2_asex_cr_filt_norm_harmony_pt, reduction = "umap.harmony_PC_man", group.by = "ptime_bal_cat" )
 ```
 
+
+```{r}
+# Count the donors with atleast 2 strrains each with atleast 100 cells
+don_100n <- v3_m2_asex_cr_filt_norm_harmony_pt@meta.data %>% count(orig.ident, StrainDon) %>% filter(n>100) %>% group_by(orig.ident) %>% filter(n_distinct(StrainDon) > 1) %>% pull(orig.ident) %>% unique() %>% str_remove(., ".mrna")
+```
+
+
+```{r}
+## Get only the asexuals
+# m2_asex_seu <- map(msc_w_cln_strns[c("MSC49", "MSC60")], ~.x[,.x@meta.data$stage %in% c("Early trophozoite", "Late ring")] %>% AddMetaData(., ))
+# dons_bal_sset <- c("M49_", "M60_", "M33_", "M66_", "M55_", "M49_|M55_")
+# dons_bal_sset <- c("M49_", "M60_", "M33_", "M66_")
+# dons_bal_sset <- c("M49C_", "M66C_")
+
+# dons_bal_sset_nms <- str_remove_all(str_replace_all(dons_bal_sset, "M", "MSC"), "_$|C_$|\\|")
+dons_bal_sset_nms <- don_100n
+
+# m2_asex_sce <- map(dons_bal_sset_nms, ~m2_asex_tr_sce_pt_chunks_sshot[, str_detect(colnames(m2_asex_tr_sce_pt_chunks_sshot),.x) & !str_detect(m2_asex_tr_sce_pt_chunks_sshot@colData$StrainDon, "Negative|Doublet")]) %>% set_names(dons_bal_sset_nms)
+
+# m2_asex_seu <- map(dons_bal_sset_nms, ~v3_m2_asex_cr_filt_norm_harmony_pt[, str_detect(v3_m2_asex_cr_filt_norm_harmony_pt@meta.data$orig.ident,.x) & !str_detect(v3_m2_asex_cr_filt_norm_harmony_pt@meta.data$StrainDon, "Negative|Doublet")]) %>% set_names(dons_bal_sset_nms)
+
+m2_asex_seu <- v3_m2_asex_cr_filt_norm_harmony_pt[, str_detect(v3_m2_asex_cr_filt_norm_harmony_pt@meta.data$orig.ident, paste(dons_bal_sset_nms, collapse = "|")) & !str_detect(v3_m2_asex_cr_filt_norm_harmony_pt@meta.data$StrainDon, "Negative|Doublet")]
+
+```
+
+Add the entire object for field lab DE and also including culture
+```{r}
+# m2_asex_sce <- c(m2_asex_sce[dons_bal_sset_nms], m2_asex_tr_sce_pt_chunks_sshot) %>% set_names(c(dons_bal_sset_nms, "FL"))
+# m2_asex_sce <- m2_asex_sce
+
+```
+
+### Balance (subsample) the strain cells within pseudotime chunks
+
+
+```{r, warning=FALSE, message=FALSE}
+set.seed(989778)
+# ds_grp <- rep('StrainDon', length(dons_bal_sset_nms))
+
+# balanced_cells_tbl <- map2(m2_asex_seu, ds_grp, ~balanced_cells_fn(sc_df = .x@colData, dsample_condtn = .y , ptime_strategy = c("donor", "ptime_bal_cat"), multpl = 1, don_yes_no = "no"))
+balanced_cells_tbl <- balanced_cells_fn(sc_df = m2_asex_seu@meta.data, dsample_condtn = "Strain_DN" , ptime_strategy = c("donor", "ptime_bal_cat"), multpl = 1, don_yes_no = "no")
+```
+
+
+
+
+```{r, warning=FALSE, message=FALSE}
+######################### !!!!!NOTE - Unbalanced alternative to increase power replacing balanced with unbalanced - switch to return balanced or viceversa 
+# m2_asex_bal_seu <- map2(m2_asex_seu, balanced_cells_tbl, ~.x[, .y$cell_bc])
+
+m2_asex_bal_seu <- m2_asex_seu[, balanced_cells_tbl$cell_bc]
+
+```
+
+```{r}
+# map(m2_asex_bal_seu, ~.x@colData[,c("ptime_bal_cat", "StrainDon")] %>% data.frame() %>% dplyr::count(ptime_bal_cat, StrainDon))
+m2_asex_bal_seu@meta.data %>% data.frame() %>% dplyr::count(ptime_bal_cat, StrainDon)
+
+```
+
+
+```{r, warning=FALSE, message=FALSE}
+## Calculate pseudotime chunks
+# v3_m2_asex_harmony_sce_ss_df2 <- map(m2_asex_bal_seu, ~ptime_chunk_calc_df_fn(sc_df = .x@meta.data, ptime = "pseudotime", chunk_num = 7, p_cat_nm = "ptime_cat", p_bal_cat_nm = "ptime_bal_cat"))
+# m2_asex_bal_seu_df2 <- map(m2_asex_bal_seu, ~ptime_chunk_calc_df_fn(sc_df = .x@meta.data, ptime = "pseudotime", chunk_num = 7, p_cat_nm = "ptime_cat", p_bal_cat_nm = "ptime_bal_cat"))
+# m2_asex_bal_seu_df2 <- ptime_chunk_calc_df_fn(sc_df = m2_asex_bal_seu@meta.data, ptime = "pseudotime", chunk_num = 8, p_cat_nm = "ptime_cat", p_bal_cat_nm = "ptime_bal_cat")
+bal_df2 <- ptime_chunk_calc_df_fn(sc_df = m2_asex_bal_seu@meta.data, ptime = "slingPseudotime_1", chunk_num = 7, p_cat_nm = "ptime_cat", p_bal_cat_nm = "ptime_bal_cat")
+
+```
+
+```{r, warning=FALSE, message=FALSE}
+## Calculate pseudotime chunks
+# v3_m2_asex_cr_filt_norm_harmony_pt_bal <- map2(v3_m2_asex_harmony_sce_ss_df2, m2_asex_bal_seu ~AddMetaData(.x, .y) )
+m2_asex_bal_seu <- AddMetaData(m2_asex_bal_seu, bal_df2) 
+
+```
+
+```{r}
+# v3_m2_asex_cr_filt_norm_harmony_pt_no_rings <- m2_asex_bal_seu
+
+```
+
+
 ```{r}
 ## subset rings - Why did I remove rings initially? Is it because this is where commitment happens? 
-# v3_m2_asex_cr_filt_norm_harmony_pt_no_rings <- v3_m2_asex_cr_filt_norm_harmony_pt[, !v3_m2_asex_cr_filt_norm_harmony_pt$harmony_clusters_ss %in% c("1")]
-v3_m2_asex_cr_filt_norm_harmony_pt_no_rings <- v3_m2_asex_cr_filt_norm_harmony_pt
+# m2_asex_bal_seu <- m2_asex_bal_seu[, !m2_asex_bal_seu$harmony_clusters_ss %in% c("1")]
+# m2_asex_bal_seu <- v3_m2_asex_cr_filt_norm_harmony_pt_bal
 
 ```
 
 ```{r}
 ## subset where field parasites are for slingshot
-v3_m2_asex_cr_filt_norm_harmony_pt_no_rings@meta.data %>% count(ptime_bal_cat, donor, Strain_DN)
+m2_asex_bal_seu@meta.data %>% count(ptime_bal_cat, donor, Strain_DN)
+```
+
+```{r}
+## subset where field parasites are for slingshot
+DimPlot(m2_asex_bal_seu, reduction = "umap.harmony_PC_man", group.by = "ptime_cat" , label = T )
+DimPlot(m2_asex_bal_seu, reduction = "umap.harmony_PC_man", group.by = "ptime_bal_cat" , label = T)
 ```
 
 
 ```{r}
+DimPlot(m2_asex_bal_seu, reduction = "umap.harmony_PC_man", group.by = "ptime_bal_cat" , label = T)
+DimPlot(m2_asex_bal_seu, reduction = "umap.harmony_PC_man", group.by = "ptime_bal_cat" , label = T)
+```
+
+```{r}
+## subset where field parasites are for slingshot
+m2_asex_bal_seu@meta.data %>% count(ptime_bal_cat, donor, Strain_DN)
+```
+
+```{r}
 # m2_asex_ap2g_bal_sce <- m2_asex_ap2g_bal_sce[, m2_asex_ap2g_bal_sce@colData[, c('ap2g_exp_all', 'ptime_bal_cat')] %>% 
-v3_m2_asex_cr_filt_norm_harmony_pt_no_rings <- v3_m2_asex_cr_filt_norm_harmony_pt_no_rings[, v3_m2_asex_cr_filt_norm_harmony_pt_no_rings@meta.data %>% 
+m2_asex_bal_seu <- m2_asex_bal_seu[, m2_asex_bal_seu@meta.data %>% 
                                                rownames_to_column('bcode') %>% 
                                                group_by(ptime_bal_cat, donor, Strain_DN) %>% 
-                                               filter(n() >=20) %>%
+                                               # filter(n() >=20) %>%
+                                               filter(n() >=10) %>%
                                                group_by(ptime_bal_cat, donor) %>% 
                                                filter(n_distinct(Strain_DN) >1) %>%
                                                # filter(n() >=100) %>% 
@@ -213,17 +315,29 @@ v3_m2_asex_cr_filt_norm_harmony_pt_no_rings <- v3_m2_asex_cr_filt_norm_harmony_p
 
 ```
 
+```{r}
+## subset where field parasites are for slingshot
+m2_asex_bal_seu@meta.data %>% count(donor,ptime_bal_cat,  Strain_DN) %>% group_by(donor,ptime_bal_cat) %>% mutate(strn_n = n_distinct(Strain_DN)) %>% filter(strn_n >1)
+```
 
 
 ```{r}
 ## subset where field parasites are for slingshot
-v3_m2_asex_cr_filt_norm_harmony_pt_no_rings@meta.data %>% count(ptime_bal_cat, donor, Strain_DN) %>% group_by(ptime_bal_cat, donor) %>% mutate(strn_n = n_distinct(Strain_DN)) %>% filter(strn_n >1)
+m2_asex_bal_seu@meta.data %>% count( donor, Strain_DN) %>% group_by( donor) %>% mutate(strn_n = n_distinct(Strain_DN)) %>% filter(strn_n >1)
 ```
 
 
+```{r}
+DimPlot(m2_asex_bal_seu, reduction = "umap.harmony_PC_man", group.by = "ptime_bal_cat" , label = T)
+```
 
 ```{r}
-DimPlot(v3_m2_asex_cr_filt_norm_harmony_pt_no_rings, reduction = "umap.harmony_PC_man", group.by = "ptime_bal_cat" )
+m2_asex_bal_seu@meta.data %>% count( ptime_bal_cat) 
+
+```
+
+```{r, eval=FALSE}
+DimPlot(m2_asex_bal_seu, reduction = "umap.harmony_PC_man", group.by = "ptime_bal_cat" )
 ```
 
 
@@ -248,38 +362,39 @@ Scaling is for visualization
 
 ```{r, message=FALSE, warning=FALSE}
 # Add to metadata the dataset/conditions and ptime cat
-# v3_m2_asex_cr_filt_norm_harmony_pt_no_rings <- v3_m2_asex_cr_filt_norm_harmony_pt_no_rings
-v3_m2_asex_cr_filt_norm_harmony_pt_no_rings[["SCT"]] <- NULL
-# v3_m2_asex_cr_filt_norm_harmony_pt_no_rings[["RNA"]]$scale.data <- NULL
-DefaultAssay(v3_m2_asex_cr_filt_norm_harmony_pt_no_rings) <- "RNA"
+# m2_asex_bal_seu <- m2_asex_bal_seu
+m2_asex_bal_seu[["SCT"]] <- NULL
+# m2_asex_bal_seu[["RNA"]]$scale.data <- NULL
+DefaultAssay(m2_asex_bal_seu) <- "RNA"
 
 ```
 
 
 ```{r, message=FALSE, warning=FALSE}
-v3_m2_asex_cr_filt_norm_harmony_pt_no_rings <- JoinLayers(v3_m2_asex_cr_filt_norm_harmony_pt_no_rings, layers = c("counts", "data", "scale.data"))
+m2_asex_bal_seu <- JoinLayers(m2_asex_bal_seu, layers = c("counts", "data", "scale.data"))
 ```
 
 ```{r, message=FALSE, warning=FALSE}
-v3_m2_asex_cr_filt_norm_harmony_pt_no_rings[["RNA"]]$scale.data <- NULL
+m2_asex_bal_seu[["RNA"]]$scale.data <- NULL
 
 ```
 
 ```{r, message=FALSE, warning=FALSE}
 # Add to metadata the dataset/conditions and ptime cat
-v3_m2_asex_cr_filt_norm_harmony_pt_no_rings@meta.data[, "don_ptime"] <- paste0(v3_m2_asex_cr_filt_norm_harmony_pt_no_rings$donor, "_", v3_m2_asex_cr_filt_norm_harmony_pt_no_rings$ptime_bal_cat)
+m2_asex_bal_seu@meta.data[, "don_ptime"] <- paste0(m2_asex_bal_seu$donor, "_", m2_asex_bal_seu$ptime_bal_cat)
 
 ```
 
 ```{r, message=FALSE, warning=FALSE}
 # Save for tradeseq 
-saveRDS(v3_m2_asex_cr_filt_norm_harmony_pt_no_rings, 'data/processed/Pf/m2_all/v3_m2_asex_cr_filt_norm_harmony_pt_no_rings.RDS')
+saveRDS(m2_asex_bal_seu, 'data/processed/Pf/m2_all/m2_asex_bal_seu.RDS')
 
 ```
 
 ```{r, message=FALSE, warning=FALSE}
 # Add to metadata the dataset/conditions and ptime cat
-all_asex_de_bal_nosct <- SplitObject(v3_m2_asex_cr_filt_norm_harmony_pt_no_rings, split.by = "don_ptime")
+# all_asex_de_bal_nosct <- SplitObject(m2_asex_bal_seu, split.by = "don_ptime")
+all_asex_de_bal_nosct <- SplitObject(m2_asex_bal_seu, split.by = "donor")
 
 ```
 
@@ -330,12 +445,14 @@ for (nm in names(asx_m2_bal_mast)) {
 ## Including lab and field strain DE
 ## !!!min.cells.group added for mh in the strain_dset where there's only balancing in lab VS field - we need to remove later
 
-pts <- "slingPseudotime_1"
-pts_all<- c(rep(pts,1))
-pts_all<- pts
+# pts <- "slingPseudotime_1"
+pts <- c("ptime_bal_cat", "slingPseudotime_1")
+# pts_all<- c(rep(pts,1))
+pts_all<- rep(list(pts),length(asx_m2_bal_mast))
+# pts_all<- pts
 
 ### !!! NOTE - RUNNING FOR NECESSARY DONORS, WILL REVERT LATER
-asx_pairwise_mkrs_seu_clustr <- list(asx_m2_bal_mast, pts, de_idents, names(asx_m2_bal_mast)) %>%
+asx_pairwise_mkrs_seu_clustr <- list(asx_m2_bal_mast, pts_all, de_idents, names(asx_m2_bal_mast)) %>%
 # ap2g_ub_pairwise_mkrs_pt_ml <- list(list(m2_bal_mast_noM55M54), pts, de_idents, names(m2_bal_mast)) %>%
   pmap(.,  ~{
     # ide = ..3
@@ -344,7 +461,10 @@ asx_pairwise_mkrs_seu_clustr <- list(asx_m2_bal_mast, pts, de_idents, names(asx_
     obj = ..1
     pseudos = ..2
     
+    
     print(class(obj))
+    print(pseudos)
+    
     print(paste("running ...", ..4))
     map(a, ~print(paste(.x[1], "n ", .x[2])))
     
@@ -555,11 +675,11 @@ DimPlot(v3_m2_asex_cr_filt_norm_harmony_pt, split.by = "donor", reduction = "uma
 ```
 
 ```{r, warning=FALSE, message=FALSE, fig.width=10, fig.height=3.5}
-DimPlot(v3_m2_asex_cr_filt_norm_harmony_pt_no_rings, split.by = "donor", reduction = "umap.harmony_PC_man")
+DimPlot(m2_asex_bal_seu, split.by = "donor", reduction = "umap.harmony_PC_man")
 ```
 
 ```{r, warning=FALSE, message=FALSE, fig.width=10, fig.height=3.5}
-imap(likely_cnvs_don, possibly(~FeaturePlot(subset(v3_m2_asex_cr_filt_norm_harmony_pt_no_rings, subset = donor == .y), features = .x, split.by = "Strain_DN", reduction = "umap.harmony_PC_man", order = T)))
+imap(likely_cnvs_don, possibly(~FeaturePlot(subset(m2_asex_bal_seu, subset = donor == .y), features = .x, split.by = "Strain_DN", reduction = "umap.harmony_PC_man", order = T)))
 ```
 
 ```{r, warning=FALSE, message=FALSE, fig.width=10, fig.height=3.5}
