--- a/local_rmd_nbooks/m2_cln_bcodes_for_pbulk_gtyping.Rmd
+++ b/local_rmd_nbooks/m2_cln_bcodes_for_pbulk_gtyping.Rmd
@@ -84,17 +84,30 @@ source("mali22_code_lnk/pf_common_vars.R")
 ```
 
 
+```{r}
+m2_all_raw_mrg <- readRDS("data/processed/Pf/m2_all/m2_all_raw_mrg.RDS")
+
+```
 
 
 ```{r}
-msc_w_cln_strns_raw <- readRDS("data/processed/Pf/m2_all/msc_w_cln_strns_raw.RDS")
+saveRDS(m2_all_raw_mrg@meta.data, "data/processed/Pf/m2_all/msc_w_cln_strns_mdata.RDS")
+```
+
+
+```{r}
+msc_w_cln_strns_raw <- SplitObject(m2_all_raw_mrg, split.by = "donor")
+
+```
+
+```{r}
+# msc_w_cln_strns_raw <- readRDS("data/processed/Pf/m2_all/msc_w_cln_strns_raw.RDS")
 
 ```
 
 
 
 ```{r}
-msc_w_cln_strns_raw <- readRDS("data/processed/Pf/m2_all/msc_w_cln_strns_raw.RDS")
 msc_w_cln_strns_raw <- msc_w_cln_strns_raw[!names(msc_w_cln_strns_raw) %in% c("MSC12")]
 
 ```
@@ -144,6 +157,10 @@ optimum_k_qcd <-  list(
 optimum_k_qcd <- optimum_k_qcd[sort(names(msc_w_cln_strns_raw))] %>% unlist()
 ```
 
+```{r}
+imap(msc_w_cln_strns_raw, ~DimPlot(., group.by = "stage") + labs(title = .y))
+
+```
 
 ```{r}
 imap(msc_w_cln_strns_raw, ~DimPlot(., group.by = "stage") + labs(title = .y))
@@ -151,9 +168,17 @@ imap(msc_w_cln_strns_raw, ~DimPlot(., group.by = "stage") + labs(title = .y))
 ```
 
 
+```{r}
+msc_w_cln_strns_raw <- map(msc_w_cln_strns_raw, ~.x@meta.data %>% 
+      mutate(stage = str_remove_all(stage, "\\(|\\)")) %>%
+      select(stage) %>%
+      AddMetaData(.x, .))
+
+```
+
 ```{r, fig.width=16, fig.height=4}
 map(msc_w_cln_strns_raw, ~.x@meta.data %>% 
-      count(stage, StagePrelim)
+      count(stage)
     ) 
   
 
@@ -178,10 +203,10 @@ map(msc_w_cln_strns_raw, ~.x@meta.data %>%
 stg_strns_cln <- map(msc_w_cln_strns_raw, ~{
   .x@meta.data %>% 
       mutate(stage_ag = case_when(stage %in% c("Early trophozoite", "Late trophozoite", "Early ring", "Late ring", "Early schizont", "Late schizont", "Gametocyte (developing)") ~ "Asexual",
-                                   stage %in% c("Male", "Male LE", "Female", "Female LE") ~ "Gametocyte")
-      ) %>%
+                                   stage %in% c("Male", "Male LE", "Female", "Female LE") ~ "Gametocyte")) %>%
     rownames_to_column("bcode") %>%
-    select(bcode, strain, stage_ag, stage) #%>% 
+    mutate(bcode = str_remove(bcode, ".*_")) %>%
+    select(bcode, Strain_DN, stage_ag, stage) #%>% 
     # AddMetaData(.x,.)
 })
 
@@ -190,7 +215,7 @@ stg_strns_cln <- map(msc_w_cln_strns_raw, ~{
 
 ```{r, fig.width=16, fig.height=4}
 map(stg_strns_cln, ~.x %>% 
-      count(strain, stage_ag) %>% 
+      count(Strain_DN, stage_ag) %>% 
       arrange(n)
     ) 
   
@@ -202,7 +227,7 @@ map(stg_strns_cln, ~.x %>%
 Write out strain_qcd + stage_ag for pseudobulk genotyping
 
 ```{r, warning=FALSE, eval=T}
-## Get donors with more than 1 strain
+## Get donors with more than 1 Strain_DN
 optimum_k_polyk <- optimum_k_qcd[optimum_k_qcd > 1]
 # optimum_k_polyk <- optimum_k_polyk[!names(optimum_k_polyk) %in% c("MSC37", "MSC38")]
 
@@ -212,13 +237,13 @@ optimum_k_polyk <- optimum_k_qcd
 
 
 ```{r, warning=FALSE, eval=T}
-## Strain downsampling for faster runs
+## Strain_DN downsampling for faster runs
 set.seed(123)
 
 stg_strns_cln_ds <- map(stg_strns_cln, ~{
   .x %>% 
   filter(stage_ag %in% c("Asexual", "Gametocyte")) %>% 
-  group_by(strain, stage_ag) %>% 
+  group_by(Strain_DN, stage_ag) %>% 
   mutate(samp = sample(n())) %>%
   mutate(pbulk_cell = case_when(stage_ag == "Asexual" & samp <= 1000 ~ "yes", stage_ag == "Gametocyte" & samp <= 500 ~ "yes" )) %>%
   filter(pbulk_cell == "yes") 
@@ -229,7 +254,7 @@ stg_strns_cln_ds <- map(stg_strns_cln, ~{
 
 ```{r, fig.width=16, fig.height=4}
 map(stg_strns_cln_ds, ~.x %>% 
-      count(strain, stage_ag) %>% 
+      count(Strain_DN, stage_ag) %>% 
       arrange(n)
     ) 
   
@@ -244,7 +269,7 @@ downsample_cells = "yes"
 sv_dir = "pbulk_gtypes_cln_1VCF"
 algn_nm = 'minmap'
 species <- "Pf"
-grps <- c('strain', 'strain_ag')
+grps <- c('Strain_DN', 'strain_ag')
 ```
 
 
@@ -274,9 +299,9 @@ for (s in names(optimum_k_polyk)) {
   
   for (k in narrow_k) {
     print(narrow_k)
-    # for (str_q in c('strain')){
+    # for (str_q in c('Strain_DN')){
       
-      ss_qcd_ano <- map(strn_mdata_tbl[s], ~.x %>% rename("str" = strain) %>% group_by(str) %>% filter(n() >= Strain_qc_cutoff) %>% ungroup() %>% mutate(across(c(str), ~droplevels(factor(.)))) %>% split(f = ~ str, drop = T))
+      ss_qcd_ano <- map(strn_mdata_tbl[s], ~.x %>% rename("str" = Strain_DN) %>% group_by(str) %>% filter(n() >= Strain_qc_cutoff) %>% ungroup() %>% mutate(across(c(str), ~droplevels(factor(.)))) %>% split(f = ~ str, drop = T))
       
       names(ss_qcd_ano[[1]]) <- names(ss_qcd_ano[[1]]) %>% str_replace(., '\\.', '_')
       # print(str(ss_qcd_ano[[1]]))
@@ -293,7 +318,7 @@ for (s in names(optimum_k_polyk)) {
       # for(stg_c in c('stage_afm', 'stage_ag')){
       # for(stg_c in c('stage_ag')){
         
-        ss_qcd_ano <- map(strn_mdata_tbl[s], ~.x %>% rename("str" = strain, "stg" = stage_ag) %>% group_by(str, stg) %>% filter(n() >= Strain_qc_cutoff) %>% ungroup() %>% mutate(across(c(str, stg), ~droplevels(factor(.)))) %>% split(f = ~ str+stg, drop = T))
+        ss_qcd_ano <- map(strn_mdata_tbl[s], ~.x %>% rename("str" = Strain_DN, "stg" = stage_ag) %>% group_by(str, stg) %>% filter(n() >= Strain_qc_cutoff) %>% ungroup() %>% mutate(across(c(str, stg), ~droplevels(factor(.)))) %>% split(f = ~ str+stg, drop = T))
         names(ss_qcd_ano[[1]]) <- names(ss_qcd_ano[[1]]) %>% str_replace(., '\\.', '_')
         print(names(ss_qcd_ano[[1]]))
 
@@ -315,11 +340,29 @@ for (s in names(optimum_k_polyk)) {
 
 
 ```{r, fig.width=12, fig.height=4}
+## NEW at 14th October
 # add stage metadata
 # run first to get the tagged bam files - we run this since we have not done so for this set of barcodes. But for other runs it may have been done already by the pbulk_gtyping.nf script
 
 #NOTE - LATEST RUN
 # nextflow run ../mali22_code_lnk/nf_scripts/pbulk_gtyping_1vcf_no_tag.nf --sv_dir "pbulk_gtypes_cln_1VCF" --bam "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/MSC*/pbulk_gtypes_cln_1VCF/st*/new_bams/*_sset_sorted_rg_don.bam" --bcodes "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/MSC*/pbulk_gtypes_cln_1VCF/bcodes/minmap/st*/*tsv" --odir "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/m2_all" --ref  "/lustre/scratch126/tol/teams/lawniczak/projects/malaria_single_cell/mali_field_runs/2022/data/references_for_souporcell/PlasmoDB-66_Pfalciparum3D7_Genome.fasta" -resume
+
+# BACKUP
+# nextflow run ../mali22_code_lnk/nf_scripts/pbulk_gtyping_bam_sset.nf --sv_dir "pbulk_gtypes_cln_1VCF" --bam "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/MSC*/soupc_resc/*/parent/out_dir/souporcell_minimap_tagged_sorted.bam" --bcodes "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/MSC*/pbulk_gtypes_cln_1VCF/bcodes/minmap/st*/*tsv" --odir "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/" --mapper "minmap" --scrpt "/nfs/users/nfs_j/jr35/multipurpose_scripts/cr_subset_bam_linux.sh" --save_bam_sset true
+
+# to be deleted if pbulk_gtyping_1vcf_no_tag.nf script works
+ ## vartrix --umi --out-variants ${sample_nm}_${strn_stg}_variants.txt --mapq 30 -b ${bam} -c ${bcodes} --scoring-method coverage --ref-matrix ${sample_nm}_${strn_stg}_ref.mtx --out-matrix ${sample_nm}_${strn_stg}_alt.mtx -v ${bi_vcf} --fasta ${params.ref}
+    
+```
+
+
+
+```{r, fig.width=12, fig.height=4}
+# add stage metadata
+# run first to get the tagged bam files - we run this since we have not done so for this set of barcodes. But for other runs it may have been done already by the pbulk_gtyping.nf script
+
+#NOTE - LATEST RUN
+# nextflow run ../mali22_code_lnk/nf_scripts/pbulk_gtyping_1vcf_no_tag.nf --sv_dir "pbulk_gtypes_cln_1VCF" --bam "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/MSC*/pbulk_gtypes_cln_1VCF/st*/new_bams/*_sset_sorted_rg_don.bam" --bcodes "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/MSC*/pbulk_gtypes_cln_1VCF/bcodes/minmap/st*/*tsv" --odir "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/m2_all" --ref  "/lustre/scratch126/tol/teams/lawniczak/users/jr35/genomes_gtfs_indexs/masked_pf_ref/PlasmoDB-68_Pfalciparum3D7_Genome_VAR_masked.fasta" -resume
 
 # BACKUP
 # nextflow run ../mali22_code_lnk/nf_scripts/pbulk_gtyping_bam_sset.nf --sv_dir "pbulk_gtypes_cln_1VCF" --bam "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/MSC*/soupc/*/parent/possorted_genome_bam.bam" --bcodes "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/MSC*/pbulk_gtypes_cln_1VCF/bcodes/minmap/st*/*tsv" --odir "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/" --mapper "minmap" --scrpt "/nfs/users/nfs_j/jr35/multipurpose_scripts/cr_subset_bam_linux.sh" --save_bam_sset true
